--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
     "declaration": true,
     "declarationMap": true,
     "composite": true,
@@ -7,10 +10,7 @@
     "outDir": "./dist",
     "baseUrl": ".",
     "moduleResolution": "Node",
-    "module": "CommonJS",
-    "target": "ES2018",
     "sourceMap": true,
-    "lib": ["esnext"],
     "esModuleInterop": true,
     "alwaysStrict": true,
     "strictNullChecks": true,
