--- a/hook/package.json
+++ b/hook/package.json
@@ -11,10 +11,12 @@
   "author": "Alexander Revenko",
   "license": "ISC",
   "dependencies": {
-    "react": "^18.3.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
